--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node .",
+    "lint": "eslint src/",
+    "lint:fix": "eslint --fix src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "CIAL Dun & Bradstreet",
   "license": "UNLICENSED",
   "private": true,
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^8.50.0"
+  }
 }
