feat: create router http methods

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "private": true,
   "devDependencies": {
     "eslint": "^8.50.0"
+  },
+  "dependencies": {
+    "path-to-regexp": "^6.2.1"
   }
 }
