--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node .",
     "lint": "eslint src/",
     "lint:fix": "eslint --fix src/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage --watchAll"
   },
   "author": "CIAL Dun & Bradstreet",
   "license": "UNLICENSED",
@@ -16,6 +18,7 @@
     "eslint": "^8.50.0"
   },
   "dependencies": {
+    "jest": "^29.7.0",
     "path-to-regexp": "^6.2.1"
   }
 }
